--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.com.openclassrooms=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/chatop?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/chatop?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=True
 spring.datasource.username=root
 spring.datasource.password=yann
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
