--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ build/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# My batch with my environment variables values
+PERSO_CHATOP_CREATE_ENVIRONMENT_VAR.bat 
