--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ logging.level.root=ERROR
 logging.level.com.openclassrooms=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
-#MySQL
+#MySQL (with user's environment variables)
 spring.datasource.url=jdbc:mysql://localhost:3306/chatop?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=True
-spring.datasource.username=root
-spring.datasource.password=yann
+spring.datasource.username=${CHATOP_YL_API_MYSQL_USERNAME}
+spring.datasource.password=${CHATOP_YL_API_MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
