--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 # Pictures size 5MB max.
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+# A comma-separated list of origins for which CORS requests are allowed
+chatop.security.cors.origins=http://localhost:4200
