Feat : Store images locally with http-server (Node.JS static HTTP server) for creating and updating rentals with pictures
Return HTTP code 500 for IOException within the picture operation
Docs : README updated

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,17 @@
-{"properties": [{
-  "name": "chatop.security.cors.origins",
-  "type": "java.lang.String",
-  "description": "A comma-separated list of origins for which CORS requests are allowed"
-}]}
+{"properties": [
+  {
+    "name": "chatop.security.cors.origins",
+    "type": "java.lang.String",
+    "description": "A comma-separated list of origins for which CORS requests are allowed"
+  },
+  {
+    "name": "chatop.service.local.httpserver.path",
+    "type": "java.lang.String",
+    "description": "The path to http-server to retrieve the images"
+  },
+  {
+    "name": "chatop.service.local.folder.path",
+    "type": "java.lang.String",
+    "description": "The path to the local folder to store pictures"
+  }
+]}
