--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.servlet.multipart.max-request-size=5MB
 
 # A comma-separated list of origins for which CORS requests are allowed
 chatop.security.cors.origins=http://localhost:4200
+
+# Http-server Node.JS for local pictures (create and update rental)
+chatop.service.local.folder.path=${CHATOP_YL_LOCAL_PATH_FOLDER}
+chatop.service.local.httpserver.path=http://127.0.0.1:8080/
+
