Fix : Rental create and picture if empty

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -14,4 +14,10 @@
     "type": "java.lang.String",
     "description": "The path to the local folder to store pictures"
   }
+  ,
+  {
+    "name": "chatop.service.default.picture",
+    "type": "java.lang.String",
+    "description": "The default picture if empty"
+  }
 ]}
