--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ chatop.security.cors.origins=http://localhost:4200
 chatop.service.local.folder.path=${CHATOP_YL_LOCAL_PATH_FOLDER}
 chatop.service.local.httpserver.path=http://127.0.0.1:8080/
 
+# default picture
+chatop.service.default.picture=https://blog.technavio.org/wp-content/uploads/2018/12/Online-House-Rental-Sites.jpg
